Changed Design of Home and functionalities. Changed Calender Function Design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string-array name="array_bauch">
         <item>Knieheben</item>
         <item>Beinheben</item>
-        <item>Buchrolle</item>
+        <item>Bauchrolle</item>
         <item>Mountain Climber</item>
         <item>Russian Twist</item>
     </string-array>
